weather/activity-4/nohup.out
Traceback (most recent call last):
  File "/home/agodbole/csc330/.venv/bin/flask", line 8, in <module>
    sys.exit(main())
             ^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/cli.py", line 1129, in main
    cli.main()
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/click/core.py", line 1082, in main
    rv = self.invoke(ctx)
         ^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/click/core.py", line 1697, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/click/core.py", line 1443, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/click/core.py", line 788, in invoke
    return __callback(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/click/decorators.py", line 92, in new_func
    return ctx.invoke(f, obj, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/click/core.py", line 788, in invoke
    return __callback(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/cli.py", line 977, in run_command
    raise e from None
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/cli.py", line 961, in run_command
    app: WSGIApplication = info.load_app()  # pyright: ignore
                           ^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/cli.py", line 349, in load_app
    app = locate_app(import_name, name)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/cli.py", line 245, in locate_app
    __import__(module_name)
  File "/home/agodbole/csc330/code/weather/activity-4/main.py", line 12
    payload = {'APPID':'c6d8f8d28ed380de9c13b5c4316244b3', 'q':city)
                                                                   ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '{'
 * Serving Flask app 'main.py'
 * Debug mode: on
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:8080
 * Running on http://10.128.0.3:8080
[33mPress CTRL+C to quit[0m
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 158-297-528
24.184.11.255 - - [11/Feb/2025 17:48:30] "[35m[1mGET /temps HTTP/1.1[0m" 500 -
Traceback (most recent call last):
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 1536, in __call__
    return self.wsgi_app(environ, start_response)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 1514, in wsgi_app
    response = self.handle_exception(e)
               ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/code/weather/activity-4/main.py", line 28, in show_temps
    city_temps = read_temps()
                 ^^^^^^^^^^^^
  File "/home/agodbole/csc330/code/weather/activity-4/main.py", line 13, in read_temps
    response = requests.get(URL,params = payload)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'requests' is not defined
24.184.11.255 - - [11/Feb/2025 17:48:30] "GET /temps?__debugger__=yes&cmd=resource&f=style.css HTTP/1.1" 200 -
24.184.11.255 - - [11/Feb/2025 17:48:30] "GET /temps?__debugger__=yes&cmd=resource&f=debugger.js HTTP/1.1" 200 -
24.184.11.255 - - [11/Feb/2025 17:48:30] "GET /temps?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1" 200 -
 * Detected change in '/home/agodbole/csc330/code/weather/activity-4/main.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 158-297-528
24.184.11.255 - - [11/Feb/2025 17:49:32] "[35m[1mGET /temps HTTP/1.1[0m" 500 -
Traceback (most recent call last):
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 1536, in __call__
    return self.wsgi_app(environ, start_response)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 1514, in wsgi_app
    response = self.handle_exception(e)
               ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/code/weather/activity-4/main.py", line 32, in show_temps
    city_temps = read_temps()
                 ^^^^^^^^^^^^
  File "/home/agodbole/csc330/code/weather/activity-4/main.py", line 19, in read_temps
    if response.status_Code == 200:
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'Response' object has no attribute 'status_Code'
24.184.11.255 - - [11/Feb/2025 17:49:32] "[36mGET /temps?__debugger__=yes&cmd=resource&f=style.css HTTP/1.1[0m" 304 -
24.184.11.255 - - [11/Feb/2025 17:49:32] "[36mGET /temps?__debugger__=yes&cmd=resource&f=debugger.js HTTP/1.1[0m" 304 -
24.184.11.255 - - [11/Feb/2025 17:49:32] "[36mGET /temps?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1[0m" 304 -
 * Detected change in '/home/agodbole/csc330/code/weather/activity-4/main.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 158-297-528
24.184.11.255 - - [11/Feb/2025 17:50:18] "[35m[1mGET /temps HTTP/1.1[0m" 500 -
Traceback (most recent call last):
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 1536, in __call__
    return self.wsgi_app(environ, start_response)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 1514, in wsgi_app
    response = self.handle_exception(e)
               ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/.venv/lib/python3.11/site-packages/flask/app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/agodbole/csc330/code/weather/activity-4/main.py", line 32, in show_temps
    city_temps = read_temps()
                 ^^^^^^^^^^^^
  File "/home/agodbole/csc330/code/weather/activity-4/main.py", line 26, in read_temps
    temperature - response_json['main']['temp']
NameError: name 'temperature' is not defined
24.184.11.255 - - [11/Feb/2025 17:50:18] "[36mGET /temps?__debugger__=yes&cmd=resource&f=style.css HTTP/1.1[0m" 304 -
24.184.11.255 - - [11/Feb/2025 17:50:18] "[36mGET /temps?__debugger__=yes&cmd=resource&f=debugger.js HTTP/1.1[0m" 304 -
24.184.11.255 - - [11/Feb/2025 17:50:18] "[36mGET /temps?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1[0m" 304 -
 * Detected change in '/home/agodbole/csc330/code/weather/activity-4/main.py', reloading
Success!
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 158-297-528
24.184.11.255 - - [11/Feb/2025 17:51:04] "GET /temps HTTP/1.1" 200 -
24.184.11.255 - - [11/Feb/2025 17:52:13] "GET /temps HTTP/1.1" 200 -
